<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">

    <androidx.cardview.widget.CardView
        android:id="@+id/popup_window_view_with_border"
        android:layout_width="180dp"
        android:layout_height="183dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="3dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/popup_window_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_margin="2dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="3dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:background="@drawable/btn_enviardocumentos_pink"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:background="@drawable/efect_bton_menu2"
                    android:fontFamily="@font/montserrat_semibold"
                    android:onClick="onClick"
                    android:text="@string/button5"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#FE1191"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="37dp"
                android:background="@drawable/btn_verdocumentos_blue"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:background="@drawable/efect_bton_menu2"
                    android:fontFamily="@font/montserrat_semibold"
                    android:onClick="onClick"
                    android:text="@string/button6"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#4500FF"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="72dp"
                android:background="@drawable/btn_oficinas_green"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:background="@drawable/efect_bton_menu2"
                    android:fontFamily="@font/montserrat_semibold"
                    android:onClick="onClick"
                    android:text="@string/button7"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#05667C"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="106dp"
                android:background="@drawable/btn_modooscuro_violet"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button8"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:background="@drawable/efect_bton_menu2"
                    android:fontFamily="@font/montserrat_semibold"
                    android:onClick="onDarkModeButtonClick"
                    android:text="@string/button8"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#41207E"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="142dp"
                android:background="@drawable/btn_idiomaingles_cyan"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button9"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:background="@drawable/efect_bton_menu2"
                    android:fontFamily="@font/montserrat_semibold"
                    android:onClick="onClick"
                    android:text="@string/button9"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#06D5EF"
                    android:textSize="12dp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>