<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/allSendDocuments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.SendDocuments2Activity">

        <LinearLayout
            android:id="@+id/LayouNameMenu"
            android:background="@android:color/transparent"
            android:layout_width="410dp"
            android:layout_height="56dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/LayouRegresar"
                android:background="@android:color/transparent"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="13dp"
                android:orientation="vertical">


                <Button
                    android:onClick="onClick"
                    android:id="@+id/buttonRegresar"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/efect_bton_menu2"
                    android:drawableLeft="@drawable/keyboard_backspace"
                    android:fontFamily="@font/montserrat_semibold"
                    android:lineHeight="21dp"
                    android:text="@string/buttonBack"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#7800FD"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayouHamburgerMenu"
                android:background="@android:color/transparent"
                android:layout_width="30dp"
                android:layout_height="27dp"
                android:layout_marginLeft="145dp"
                android:layout_marginTop="13dp"
                android:orientation="vertical">


                <ImageView
                    android:onClick="onClick"
                    android:id="@+id/imageBurgerMenu"
                    android:layout_width="25dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginLeft="3.74dp"
                    android:layout_marginRight="3.74dp"
                    android:background="@drawable/efect_bton_menu2"
                    app:srcCompat="@drawable/hamburger_menu" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:background="@android:color/transparent"
            android:layout_width="354dp"
            android:layout_height="51dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="61dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LayouNameMenu"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textSendDocuments"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_marginRight="15dp"
                android:layout_weight="700"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/textSendDocuments2"
                android:textAlignment="center"
                android:textColor="#262626"
                android:textSize="22dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:background="@android:color/transparent"
            android:layout_width="82dp"
            android:layout_height="72dp"
            android:layout_marginLeft="124.54dp"
            android:layout_marginRight="129.54dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:onClick="onClick"
                android:id="@+id/imageCamera"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:background="@drawable/efect_bton_menu2"
                app:srcCompat="@drawable/add_a_photo" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:background="@android:color/transparent"
            android:layout_width="364dp"
            android:layout_height="39dp"
            android:layout_marginTop="70dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.0">

            <FrameLayout
                android:background="@android:color/transparent"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp">

                <ImageView
                    android:id="@+id/imageBadge"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="0dp"
                    app:srcCompat="@drawable/badge" />
            </FrameLayout>

            <LinearLayout
                android:background="@android:color/transparent"
                android:layout_width="275dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:backgroundTint="@android:color/transparent"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/HintTextNumber"
                    android:inputType="number"
                    android:textColor="#262626"
                    android:textColorHint="#262626"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:background="@android:color/transparent"
            android:layout_width="365dp"
            android:layout_height="260dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imageLine1"
                android:layout_width="325dp"
                android:layout_height="5dp"
                android:layout_marginRight="0dp"
                app:srcCompat="@drawable/line_1" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="325dp"
                android:layout_height="38dp"
                android:layout_marginTop="0dp"
                android:backgroundTint="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/HintTextName"
                android:inputType="text"
                android:textColor="#262626"
                android:textColorHint="#262626"
                android:textSize="15.5dp" />

            <ImageView
                android:id="@+id/imageLine2"
                android:layout_width="325dp"
                android:layout_height="5dp"
                android:layout_marginRight="0dp"
                app:srcCompat="@drawable/line_1" />

            <EditText
                android:id="@+id/ediTextApellidos"
                android:layout_width="325dp"
                android:layout_height="38dp"
                android:layout_marginTop="0dp"
                android:backgroundTint="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/HintTextApellidos"
                android:inputType="text"
                android:textColor="#262626"
                android:textColorHint="#262626"
                android:textSize="15.5dp" />

            <ImageView
                android:id="@+id/imageLine3"
                android:layout_width="325dp"
                android:layout_height="5dp"
                android:layout_marginRight="0dp"
                app:srcCompat="@drawable/line_1" />

            <EditText
                android:id="@+id/editTextCorreo"
                android:layout_width="325dp"
                android:layout_height="38dp"
                android:layout_marginTop="0dp"
                android:backgroundTint="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="Correo"
                android:inputType="textEmailAddress"
                android:textColor="#262626"
                android:textColorHint="#262626"
                android:textSize="15.5dp" />

            <ImageView
                android:id="@+id/imageLine4"
                android:layout_width="325dp"
                android:layout_height="5dp"
                android:layout_marginRight="0dp"
                app:srcCompat="@drawable/line_1" />

            <LinearLayout
                android:background="@android:color/transparent"
                android:layout_width="364dp"
                android:layout_height="39dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                app:layout_constraintVertical_bias="0.0">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_view2"
                    android:layout_width="349dp"
                    android:layout_height="35dp"
                    android:backgroundTint="#000000"
                    android:fontFamily="@font/montserrat"
                    android:textSize="15dp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageLine5"
                android:layout_width="325dp"
                android:layout_height="5dp"
                android:layout_marginRight="0dp"
                app:srcCompat="@drawable/line_1" />

            <EditText
                android:id="@+id/editTextTipoAdjunto"
                android:layout_width="355dp"
                android:layout_height="38dp"
                android:layout_marginTop="0dp"
                android:backgroundTint="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/HintTextTipoAdjunto"
                android:inputType="text"
                android:textColor="#262626"
                android:textColorHint="#262626"
                android:textSize="15.5dp" />
            <ImageView
                android:id="@+id/imageLine6"
                android:layout_width="325dp"
                android:layout_height="5dp"
                android:layout_marginRight="0dp"
                app:srcCompat="@drawable/line_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn_document_pink"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.203"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/buttonDocument"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/efect_bton_menu2"
                android:drawableLeft="@drawable/backup"
                android:fontFamily="@font/montserrat"
                android:onClick="onClick"
                android:text="@string/buttonDocument"
                android:textAllCaps="false"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="325dp"
            android:layout_height="45dp"
            android:background="@drawable/btn_document_pink"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
            app:layout_constraintVertical_bias="0.292">

            <Button
                android:id="@+id/buttonSend"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="@drawable/efect_bton_menu2"
                android:fontFamily="@font/montserrat"
                android:onClick="onClick"
                android:text="@string/buttonSend"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="364dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            tools:ignore="MissingConstraints">


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_view"
                android:layout_width="341dp"
                android:layout_height="51dp"
                android:backgroundTint="#000000"
                android:entries="@array/type_documents_array"
                android:fontFamily="@font/montserrat"
                android:textSize="15dp"
                tools:ignore="MissingConstraints" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>